# Intern_cpp_Dem

./: README.md
00_Introduction/: CMakeLists.txt  main.cpp
01_templates/: CMakeLists.txt  Header.h  Source.cpp
02_CMake/: CMakeLists.txt  main.cpp
03_CMake+test/gtest/: CMakeLists.txt
03_CMake+test/json/: my_json.h
03_CMake_gtest/gtest/test/: gtest.cpp
03_CMake_gtest/json/: CMakeLists.txt
04_Cross_zero/: CMakeLists.txt  main.cpp
05_SparseMatrix/gtest/: CMakeLists.txt
05_SparseMatrix/gtest/test/: gtest.cpp
05_SparseMatrix/include/sparseMatrix/: Point.h  sparseMatrix.h
06_OpenCV/: openCV.cpp
07_OpenCV_2/: CMakeLists.txt  openCV.cpp
08_OpenCV_3/: CMakeLists.txt  openCV.cpp
09_microcontroller/: about.txt  intern.c
10_openCL/: main.cpp
11_Dlib/: CMakeLists.txt  dlib_ex.cpp
12_MySQL/: main.cpp
13_Threads/: CMakeLists.txt  Point.h  openCV.cpp
13_Threads/result/: graf.txt
